fixed some spacing

--- a/packages/nextjs-app-ts/src/styles/globals.css
+++ b/packages/nextjs-app-ts/src/styles/globals.css
@@ -1,5 +1,6 @@
 @import 'eth-components/ant/index.css';
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800;900&family=Open+Sans:wght@300;400;500;600;700;800&display=swap');body {
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800;900&family=Open+Sans:wght@300;400;500;600;700;800&display=swap');
+body {
   margin: 0;
   font-family: Roboto, sans-serif;
   -webkit-font-smoothing: antialiased;
